updated external server url in xml config